unpackaged/main/default/objects/Product_Inventory__c/fields/ATS__c.field-meta.xml
<CustomField>
    <fullName>ATS__c</fullName>
    <label>ATS</label>
    <precision>12</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>