unpackaged/main/default/objects/Product_Inventory__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Inventory</relationshipLabel>
    <relationshipName>Product_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>