unpackaged/main/default/objects/Product_Inventory__c/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>sku</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>