unpackaged/main/default/objects/Product_Inventory__c/fields/UK_product_inventory__c.field-meta.xml
<CustomField>
    <fullName>UK_product_inventory__c</fullName>
    <description>Unique key for SKU and Warehouse</description>
    <externalId>true</externalId>
    <label>UK product inventory</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>